--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>טופס מלאי יומי</title>
-  <!-- React 18 UMD + Babel (for JSX in browser). Using react-dom-client for createRoot. -->
+  <!-- React 18 + Babel from CDN -->
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom-client.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
   <style>
-    body{min-height:100vh}
+    body { min-height: 100vh; }
   </style>
 </head>
 <body class="bg-gradient-to-b from-violet-50 via-slate-50 to-pink-50 min-h-screen">
@@ -19,41 +19,66 @@
 
   <!-- React code compiled by Babel in the browser -->
   <script type="text/babel">
-    const { useState } = React;
+    const { useState, useEffect, useMemo } = React;
 
-    function App() {
-      const [count, setCount] = useState(0);
+    // ===== Example Inventory Form =====
+    function InventoryForm() {
+      const [items, setItems] = useState({
+        "וואפו": 0,
+        "בייס שיטאקי": 0,
+        "אמאזו": 0,
+        "גומה דארה": 0,
+      });
+
+      const [search, setSearch] = useState("");
+
+      const updateAmount = (name, value) => {
+        setItems(prev => ({ ...prev, [name]: Math.max(0, value) }));
+      };
+
+      const filtered = Object.keys(items).filter(
+        k => k.includes(search) || k.toLowerCase().includes(search.toLowerCase())
+      );
+
       return (
         <div className="max-w-xl mx-auto p-4">
           <h1 className="text-2xl font-bold text-center mb-4">טופס מלאי יומי</h1>
-          <p className="text-center mb-6">דוגמה – כאן יבוא הקוד המלא שלך</p>
-          <div className="flex justify-center gap-4">
-            <button onClick={() => setCount(count - 1)} className="px-4 py-2 bg-rose-200 rounded">-</button>
-            <span className="px-4 py-2 bg-white border rounded">{count}</span>
-            <button onClick={() => setCount(count + 1)} className="px-4 py-2 bg-green-200 rounded">+</button>
+          <div className="mb-4">
+            <input
+              type="text"
+              placeholder="חיפוש..."
+              value={search}
+              onChange={e => setSearch(e.target.value)}
+              className="w-full rounded-xl border border-slate-300 px-3 py-2"
+            />
           </div>
+          <ul className="space-y-3">
+            {filtered.map(name => (
+              <li key={name} className="bg-white rounded-xl border border-slate-200 p-3 shadow-sm flex justify-between items-center">
+                <span>{name}</span>
+                <input
+                  type="number"
+                  min="0"
+                  step="0.5"
+                  value={items[name]}
+                  onChange={e => updateAmount(name, parseFloat(e.target.value) || 0)}
+                  className="w-20 text-center rounded-lg border border-slate-300 px-2 py-1"
+                />
+              </li>
+            ))}
+          </ul>
         </div>
       );
     }
 
-    // React 18 createRoot (with safe fallback for UMD globals)
+    // React 18 createRoot
     const container = document.getElementById('root');
     const createRoot = (window.ReactDOM && ReactDOM.createRoot)
       ? ReactDOM.createRoot
       : (window.ReactDOMClient && ReactDOMClient.createRoot);
 
-    if (!createRoot) {
-      throw new Error('React 18 createRoot is not available.');
-    }
-
     const root = createRoot(container);
-    root.render(<App />);
-
-    // --- Self-test (does not affect UI) ---
-    setTimeout(() => {
-      const h1 = document.querySelector('#root h1');
-      console.assert(!!h1, 'Self-test: App should render <h1> into #root');
-    }, 0);
+    root.render(<InventoryForm />);
   </script>
 </body>
 </html>
