--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom-client.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>tailwind.config={theme:{extend:{boxShadow:{glow:'0 10px 40px rgba(0,0,0,.08)'} }}};</script>
   <style>
-    :root{
-      --ink:#0f172a;--muted:#64748b;
-    }
+    :root{--ink:#0f172a;--muted:#64748b}
     body{min-height:100vh}
     .name{word-break:break-word}
+    .glass{backdrop-filter:saturate(180%) blur(8px)}
   </style>
 </head>
-<body class="bg-gradient-to-b from-violet-50 via-slate-50 to-pink-50 text-slate-900 min-h-screen">
+<body class="bg-gradient-to-b from-rose-50 via-fuchsia-50 to-sky-50 text-slate-900 min-h-screen">
   <div id="root"></div>
 
   <script type="text/babel">
@@ -93,27 +93,27 @@
 
     const PALETTES = {
       cold: {
-        bg: "from-cyan-50 via-cyan-100 to-sky-100",
+        bg: "from-cyan-100 via-sky-100 to-indigo-100",
         border: "border-cyan-300",
-        ring: "ring-cyan-500",
-        chip: "bg-gradient-to-r from-cyan-300 to-sky-300 text-cyan-950",
-        btn: { plus: "bg-cyan-600 text-white hover:bg-cyan-700", minus: "bg-white hover:bg-cyan-50" },
+        ring: "ring-cyan-600",
+        chip: "bg-gradient-to-r from-cyan-400 to-sky-500 text-white",
+        btn: { plus: "bg-gradient-to-r from-cyan-600 to-sky-600 text-white hover:brightness-110", minus: "bg-white hover:bg-cyan-50" },
         accent: "text-cyan-700",
       },
       hot: {
-        bg: "from-amber-50 via-orange-100 to-rose-100",
+        bg: "from-amber-100 via-orange-100 to-rose-100",
         border: "border-amber-300",
-        ring: "ring-amber-500",
-        chip: "bg-gradient-to-r from-amber-300 to-orange-300 text-amber-950",
-        btn: { plus: "bg-amber-600 text-white hover:bg-amber-700", minus: "bg-white hover:bg-amber-50" },
+        ring: "ring-amber-600",
+        chip: "bg-gradient-to-r from-amber-500 to-orange-600 text-white",
+        btn: { plus: "bg-gradient-to-r from-amber-600 to-orange-600 text-white hover:brightness-110", minus: "bg-white hover:bg-amber-50" },
         accent: "text-amber-700",
       },
       nines: {
-        bg: "from-emerald-50 via-emerald-100 to-lime-100",
+        bg: "from-emerald-100 via-teal-100 to-lime-100",
         border: "border-emerald-300",
-        ring: "ring-emerald-500",
-        chip: "bg-gradient-to-r from-emerald-300 to-lime-300 text-emerald-950",
-        btn: { plus: "bg-emerald-600 text-white hover:bg-emerald-700", minus: "bg-white hover:bg-emerald-50" },
+        ring: "ring-emerald-600",
+        chip: "bg-gradient-to-r from-emerald-500 to-lime-600 text-white",
+        btn: { plus: "bg-gradient-to-r from-emerald-600 to-lime-600 text-white hover:brightness-110", minus: "bg-white hover:bg-emerald-50" },
         accent: "text-emerald-700",
       },
     };
@@ -256,26 +256,26 @@
 
       return (
         <div className="max-w-xl mx-auto px-3 py-4">
-          <header className="mb-4 flex items-start justify-between gap-3">
-            <div>
+          <header className="sticky top-0 z-10 mb-4 flex items-center justify-between gap-3 bg-white/70 glass rounded-2xl px-3 py-2 shadow-glow">
+            <div className="py-1">
               <h1 className="text-2xl font-extrabold tracking-tight bg-clip-text text-transparent bg-gradient-to-r from-fuchsia-600 to-sky-600">{t.appTitle}</h1>
-              <p className="text-sm text-slate-600">{t.subtitle}</p>
+              <p className="text-xs text-slate-600">{t.subtitle}</p>
             </div>
-            <button onClick={()=> setState(s=>({...s, lang: s.lang==='he'?'en':'he'}))} className="rounded-full border border-slate-300 px-3 py-1 text-sm bg-white shadow hover:shadow-md">{langKey==='he'?'EN':'HE'}</button>
+            <button onClick={()=> setState(s=>({...s, lang: s.lang==='he'?'en':'he'}))} className="rounded-full border border-slate-300 px-3 py-1 text-sm bg-white shadow hover:shadow-md hover:-translate-y-0.5 transition">{langKey==='he'?'EN':'HE'}</button>
           </header>
 
           {/* Date + Search */}
           <section className="grid grid-cols-1 gap-3 mb-4">
             <label className="flex flex-col gap-1">
               <span className="text-sm">{t.date}</span>
-              <input type="date" value={state.meta.date} onChange={(e)=> setMeta('date', e.target.value)} className="rounded-2xl border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-slate-500 bg-white" />
+              <input type="date" value={state.meta.date} onChange={(e)=> setMeta('date', e.target.value)} className="rounded-2xl border border-slate-200 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-slate-500 bg-white shadow-glow" />
             </label>
             <div className="flex items-center gap-2 flex-wrap">
-              <div className="flex-1 rounded-full border border-slate-300 bg-white px-3 py-2 shadow-sm focus-within:ring-2 focus-within:ring-slate-500">
-                <div className="flex items-center gap-2 flex-wrap">
-                  <span className="opacity-60">🔎</span>
+              <div className="flex-1 rounded-full border border-slate-200 bg-white px-4 py-2 shadow-glow focus-within:ring-2 focus-within:ring-fuchsia-500">
+                <div className="flex items-center gap-2">
+                  <span className="opacity-70">🔎</span>
                   <input placeholder={t.search} value={q} onChange={(e)=> setQ(e.target.value)} className="w-full focus:outline-none bg-transparent" />
-                  {q && <button onClick={()=> setQ('')} className="text-xs opacity-60 hover:opacity-100">{t.clear}</button>}
+                  {q && <button onClick={()=> setQ('')} className="text-xs opacity-70 hover:opacity-100">{t.clear}</button>}
                 </div>
               </div>
             </div>
@@ -320,15 +320,15 @@
     function CategoryCard({ id, label, palette, lang, items, custom, note, onNote, onAmount, onAddCustom, onSetCustom, onRemoveCustom, onClear, t }){
       const names = Object.keys(items);
       return (
-        <section id={id} className={`mb-4 rounded-2xl border ${palette.border} bg-gradient-to-b ${palette.bg} p-3 shadow-sm`}>
+        <section id={id} className={`mb-4 rounded-3xl border ${palette.border} bg-gradient-to-br ${palette.bg} p-3 shadow-glow overflow-hidden`}>
           <div className="flex items-center justify-between gap-2 mb-2">
-            <h2 className="text-lg font-semibold"><span className={`inline-flex items-center px-2 py-0.5 rounded-xl ${palette.chip}`}>{label}</span></h2>
+            <h2 className="text-lg font-semibold"><span className={`inline-flex items-center px-3 py-1 rounded-2xl ${palette.chip} shadow text-sm`}>{label}</span></h2>
             <button onClick={onClear} className="text-xs underline opacity-70 hover:opacity-100">{t.resetCat}</button>
           </div>
           <div className="flex items-center justify-between text-xs text-slate-600 px-1 mb-1"><span>{t.nameCol}</span><span>{t.qtyCol}</span></div>
           <ul className="space-y-3">
             {names.map((heName)=> (
-              <li key={heName} className="bg-white rounded-2xl border border-slate-200 px-2 py-2 shadow-sm">
+              <li key={heName} className="bg-white/95 rounded-2xl border border-slate-200 px-3 py-3 shadow-glow">
                 <div className="flex items-center gap-2 flex-wrap">
                   <div className="flex-1 min-w-[60%] sm:min-w-[50%]">
                     <div className="font-semibold whitespace-normal break-words leading-tight">{displayName(heName, lang)}</div>
@@ -339,7 +339,7 @@
               </li>
             ))}
             {custom.map((row,idx)=> (
-              <li key={`c-${idx}`} className="bg-white rounded-2xl border border-slate-200 px-2 py-2 shadow-sm">
+              <li key={`c-${idx}`} className="bg-white/95 rounded-2xl border border-slate-200 px-3 py-3 shadow-glow">
                 <div className="flex items-center gap-2 flex-wrap">
                   <input placeholder={t.addCustom.replace('+ ','')} value={row.name} onChange={(e)=> onSetCustom(idx,'name', e.target.value)} className="flex-1 min-w-[60%] sm:min-w-[50%] rounded-xl border border-slate-300 px-2 py-2 focus:outline-none focus:ring-2 focus:ring-slate-500" />
                   <QuantityInput value={row.amount} onChange={(v)=> onSetCustom(idx,'amount', v)} palette={palette} t={t} />
@@ -374,23 +374,23 @@
       const total = roundTo(boxes * 2 + litersRemainder, stepL);
       return (
         <div className="flex items-stretch gap-2 select-none flex-wrap sm:flex-nowrap w-full" id="qty-group">
-          <div className="flex items-center gap-1 rounded-xl border px-2 py-1.5 bg-white shadow-sm min-w-[120px] sm:min-w-[150px] justify-between">
-            <div className="text-xs opacity-70 mr-1">{t.boxes}</div>
+          <div className="flex items-center gap-1 rounded-2xl border px-3 py-2 bg-white/90 shadow-glow min-w-[140px] justify-between">
+            <div className="text-xs opacity-80 mr-1">📦 {t.boxes}</div>
             <div className="flex items-center gap-1">
-              <button type="button" onClick={decBox} className={`px-2 py-1 rounded-lg border ${palette.border} ${palette.btn.minus}`}>–</button>
+              <button type="button" onClick={decBox} className={`px-3 py-1.5 rounded-full border ${palette.border} ${palette.btn.minus} transition`}>–</button>
               <input inputMode="numeric" pattern="[0-9]*" value={Number.isFinite(boxes)? boxes: 0} onChange={(e)=> setBoxes(Number(e.target.value.replace(/[^0-9]/g,''))||0)} className={`w-12 text-center rounded-lg border ${palette.border} px-2 py-1 focus:outline-none ${palette.ring} focus:ring-2`} aria-label={t.boxes} title={t.boxes} />
-              <button type="button" onClick={incBox} className={`px-2 py-1 rounded-lg ${palette.btn.plus}`}>+</button>
+              <button type="button" onClick={incBox} className={`px-3 py-1.5 rounded-full ${palette.btn.plus} transition`}>+</button>
             </div>
           </div>
           <div className="flex items-center gap-1 rounded-xl border px-2 py-1.5 bg-white shadow-sm min-w-[120px] sm:min-w-[150px] justify-between">
-            <div className="text-xs opacity-70 mr-1">{t.liters}</div>
+            <div className="text-xs opacity-80 mr-1">🧃 {t.liters}</div>
             <div className="flex items-center gap-1">
-              <button type="button" onClick={decL} className={`px-2 py-1 rounded-lg border ${palette.border} ${palette.btn.minus}`}>–</button>
+              <button type="button" onClick={decL} className={`px-3 py-1.5 rounded-full border ${palette.border} ${palette.btn.minus} transition`}>–</button>
               <input inputMode="decimal" pattern="[0-9]*" value={Number.isFinite(litersRemainder)? litersRemainder: 0} onChange={(e)=> setLiters(Number(e.target.value.replace(/[^0-9.]/g,''))||0)} className={`w-14 text-center rounded-lg border ${palette.border} px-2 py-1 focus:outline-none ${palette.ring} focus:ring-2`} aria-label={t.liters} title={t.liters} />
-              <button type="button" onClick={incL} className={`px-2 py-1 rounded-lg ${palette.btn.plus}`}>+</button>
+              <button type="button" onClick={incL} className={`px-3 py-1.5 rounded-full ${palette.btn.plus} transition`}>+</button>
             </div>
           </div>
-          <div className="flex items-center rounded-full bg-slate-900 text-white px-3 text-xs font-semibold sm:ml-auto mt-2 sm:mt-0">{t.total}:&nbsp;{total}&nbsp;{t.unit}</div>
+          <div className="flex items-center rounded-full bg-slate-900 text-white px-3 text-xs font-semibold sm:ml-auto mt-2 sm:mt-0 shadow">{t.total}:&nbsp;{total}&nbsp;{t.unit}</div>
         </div>
       );
     }
